{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 66,
  "lineage": "178863bd-7d5a-b2f8-f532-b78495f4be86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Tenacity-IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5b49cbb2e2c6273",
            "association_id": "eipassoc-093184c70d0fce147",
            "domain": "vpc",
            "id": "eipalloc-0e5b49cbb2e2c6273",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ec16c6590be51958",
            "private_dns": "ip-10-0-4-144.eu-west-2.compute.internal",
            "private_ip": "10.0.4.144",
            "public_dns": "ec2-52-56-119-138.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.119.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:internet-gateway/igw-0a49c829044700a95",
            "id": "igw-0a49c829044700a95",
            "owner_id": "958654034905",
            "tags": {
              "Name": "Prod-igw"
            },
            "tags_all": {
              "Name": "Prod-igw"
            },
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-Nat-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5b49cbb2e2c6273",
            "connectivity_type": "public",
            "id": "nat-0744e0ee26960e000",
            "network_interface_id": "eni-0ec16c6590be51958",
            "private_ip": "10.0.4.144",
            "public_ip": "52.56.119.138",
            "subnet_id": "subnet-006ccb0cc607a766c"
          },
          "dependencies": [
            "aws_eip.Tenacity-IP",
            "aws_subnet.prod-private-sub2",
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod-pri-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:route-table/rtb-0ab47340a44c4f192",
            "id": "rtb-0ab47340a44c4f192",
            "owner_id": "958654034905",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Prod-pri-route-table"
            },
            "tags_all": {
              "Name": "Prod-pri-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:route-table/rtb-0b23194ece4e9ac9b",
            "id": "rtb-0b23194ece4e9ac9b",
            "owner_id": "958654034905",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Prod-pub-route-table",
              "cidr_block": "0.0.0.0/0"
            },
            "tags_all": {
              "Name": "Prod-pub-route-table",
              "cidr_block": "0.0.0.0/0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Prod-igw-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056b1a4e56633f82f",
            "route_table_id": "rtb-0ab47340a44c4f192",
            "subnet_id": "subnet-006ccb0cc607a766c"
          },
          "dependencies": [
            "aws_route_table.Prod-pri-route-table",
            "aws_subnet.prod-private-sub2",
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-private-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:subnet/subnet-05ddf21777e9d135f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ddf21777e9d135f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958654034905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-priv-sub1"
            },
            "tags_all": {
              "Name": "Prod-priv-sub1"
            },
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod-public-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:subnet/subnet-06853850d04df51f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06853850d04df51f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958654034905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-pub-sub1"
            },
            "tags_all": {
              "Name": "Prod-pub-sub1"
            },
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-private-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:subnet/subnet-006ccb0cc607a766c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ccb0cc607a766c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958654034905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-priv-sub2"
            },
            "tags_all": {
              "Name": "prod-priv-sub2"
            },
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-public-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:subnet/subnet-060cc482f5b84c16d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060cc482f5b84c16d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958654034905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pub-sub2"
            },
            "tags_all": {
              "Name": "prod-pub-sub2"
            },
            "vpc_id": "vpc-0ac4a5b0ba6954042"
          },
          "dependencies": [
            "aws_vpc.Tenacity-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Tenacity-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:958654034905:vpc/vpc-0ac4a5b0ba6954042",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0754d4f5af7d2fe16",
            "default_route_table_id": "rtb-0f1877c842152c46d",
            "default_security_group_id": "sg-0a49554f54f6714ef",
            "dhcp_options_id": "dopt-0d6ceb87774192831",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac4a5b0ba6954042",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1877c842152c46d",
            "owner_id": "958654034905",
            "tags": {
              "Name": "Tenacity-vpc"
            },
            "tags_all": {
              "Name": "Tenacity-vpc"
            }
          }
        }
      ]
    }
  ]
}